mypy/test/data/check-unions.test
-- Type checking of union types

[case testUnion1]
from typing import Union
def f(x: Union(int,str)) -> None:
    if isinstance(x, int):
        y = 1
        y = x
    elif isinstance(x, str):
        z = 'a'
        z = x
[builtins fixtures/isinstance.py]

[case testUnion2]
from typing import Union
def f(x: Union(int,str)) -> None:
    if isinstance(x, int):
        y = 1
        y = x
    else:
        z = 'a'
        z = x
[builtins fixtures/isinstance.py]

[case testUnion3]
from typing import Union
def f(x: Union(int,str)) -> None:
    if isinstance(x, int):
        y = 1
        y = x
    else:
        z = 2
        z = x # E: Incompatible types in assignment (expression has type "str", variable has type "int")
[builtins fixtures/isinstance.py]
[out]
main: In function "f":
